--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -8,20 +8,20 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tipo: "
-                android:textAppearance="@android:style/TextAppearance.Medium"/>
+                android:textAppearance="@android:style/TextAppearance.Medium" />
 
             <RadioGroup
                 android:id="@+id/radioTipoSujeto"
@@ -30,57 +30,48 @@
 
                 <RadioButton
                     android:id="@+id/radioDepositoGlp"
-                    android:layout_width="wrap_content"
                     style="@style/altosEnlaces"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Depósito GLP"
-                    android:textAppearance="@android:style/TextAppearance.Large" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                 <RadioButton
                     android:id="@+id/radioTransporteGlp"
-                    android:layout_width="wrap_content"
                     style="@style/altosEnlaces"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Transporte GLP"
-                    android:textAppearance="@android:style/TextAppearance.Large" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
             </RadioGroup>
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Identificación: "
-                android:textAppearance="@android:style/TextAppearance.Medium"/>
+                android:textAppearance="@android:style/TextAppearance.Medium" />
 
             <EditText
                 android:id="@+id/etRuc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="8"
+                android:ems="9"
                 android:hint="@string/hintIdentificacion"
                 android:inputType="number"
-                android:textAppearance="@android:style/TextAppearance.Large" />
+                android:maxLength="13"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
-
-
-
-        </TableRow>
+            android:layout_height="match_parent"/>
 
     </TableLayout>
 
