--- a/app/src/main/res/layout/fragment_venta.xml
+++ b/app/src/main/res/layout/fragment_venta.xml
@@ -33,7 +33,7 @@
                     android:layout_width="180dp"
                     android:layout_height="100dp"
                     android:text="DIGITAR"
-                    android:textAppearance="@android:style/TextAppearance.Holo.Large"/>
+                    android:textAppearance="@android:style/TextAppearance.Holo.Large" />
             </TableRow>
 
             <TableRow
@@ -42,26 +42,32 @@
                 android:layout_marginTop="30dp">
 
                 <TextView
-                    android:id="@+id/textView27"
+                    android:id="@+id/txtEtiquetaIdent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Identificación:"
-                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
+                    android:text="Identificación:" />
+
+                <CheckBox
+                    android:id="@+id/cbIdentificador"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="false" />
 
                 <TextView
                     android:id="@+id/tvCodigoLeidoFragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:inputType="textPassword"/>
 
                 <EditText
                     android:id="@+id/etCodigoLeidoFragment"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="9"
+                    android:ems="7"
                     android:inputType="number"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             </TableRow>
 
@@ -76,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Fecha de expedición"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         </TableRow>
 
@@ -101,24 +107,20 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
         </TableRow>
 
-        <TableRow
-            android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:id="@+id/textView28"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
-
-            <Button
-                android:id="@+id/btnBuscarFragment"
+            <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="71dp"
-                android:text="BUSCAR"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-        </TableRow>
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:gravity="center_horizontal">
+
+                <Button
+                    android:id="@+id/btnBuscarFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="BUSCAR"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            </TableRow>
 
         </TableLayout>
 
