--- a/app/src/main/res/layout/activity_registro_paso3.xml
+++ b/app/src/main/res/layout/activity_registro_paso3.xml
@@ -327,26 +327,15 @@
 
             </TableLayout>
 
+            <Button
+                android:id="@+id/btnAceptarRegistroUsuario"
+                style="@style/botones"
+                android:layout_width="200dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:onClick="registrarUsuario"
+                android:text="ACEPTAR" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/btnAceptarRegistroUsuario"
-                    android:layout_width="wrap_content"
-                    android:layout_height="71dp"
-                    android:layout_weight="1"
-                    android:onClick="registrarUsuario"
-                    android:text="ACEPTAR" />
-            </LinearLayout>
 
             <FrameLayout
                 android:layout_width="wrap_content"
