--- a/app/src/main/res/layout/fragment_enviar_ventas.xml
+++ b/app/src/main/res/layout/fragment_enviar_ventas.xml
@@ -43,8 +43,9 @@
 
             <Button
                 android:id="@+id/btnEnviarVentas"
-                android:layout_width="wrap_content"
                 style="@style/botones"
+                android:layout_width="200dp"
+                android:layout_gravity="center"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
                 android:text="@string/enviarVentas"
