--- a/app/src/main/res/layout/fragment_venta.xml
+++ b/app/src/main/res/layout/fragment_venta.xml
@@ -23,15 +23,15 @@
 
                 <Button
                     android:id="@+id/btnEscanearFragment"
-                    android:layout_width="170dp"
-                    android:layout_height="100dp"
+                    android:layout_width="150dp"
+                    style="@style/botones"
                     android:text="ESCANEAR"
                     android:textAppearance="@android:style/TextAppearance.Large"/>
 
                 <Button
                     android:id="@+id/btnDigitarFragment"
-                    android:layout_width="180dp"
-                    android:layout_height="100dp"
+                    android:layout_width="150dp"
+                    style="@style/botones"
                     android:text="DIGITAR"
                     android:textAppearance="@android:style/TextAppearance.Holo.Large" />
             </TableRow>
@@ -115,9 +115,9 @@
 
                 <Button
                     android:id="@+id/btnBuscarFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
+                    style="@style/botones"
+                    android:layout_width="150dp"
+
                     android:text="BUSCAR"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </TableRow>
