--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Identificación: "
+                android:text="RUC: "
                 android:textAppearance="@android:style/TextAppearance.Medium" />
 
             <EditText
